2024-12-26T01:14:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12498133927 # 521
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-26
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 715 1186 / 716 1187
* notice: next accum: outdated-unq outdated-all / unq all: 716 1187 / 717 1188
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-12-08] / [2024-12-25]

2024-12-16T01:24:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12344162256 # 511
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-16
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 714 1185 / 716 1187
* notice: next accum: outdated-unq outdated-all / unq all: 715 1186 / 716 1187
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-02] / []

2024-12-13T01:22:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12307806786 # 508
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-13
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 713 1184 / 716 1187
* notice: next accum: outdated-unq outdated-all / unq all: 714 1185 / 716 1187
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-29] / []

2024-12-09T01:23:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12227169113 # 504