@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-12-26T01:14:30Z",
+  "timestamp" : "2024-12-29T01:21:31Z",
   "count_outdated" : 1187,
   "uniques_outdated" : 716,
-  "count" : 1188,
-  "uniques" : 717,
+  "count" : 1189,
+  "uniques" : 718,
   "clones" : [
     {
       "timestamp": "2024-12-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
