@@ -1,3 +1,12 @@
+2024-12-29T01:21:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12531289976 # 524
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-29
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 716 1187 / 717 1188
+* notice: next accum: outdated-unq outdated-all / unq all: 716 1187 / 718 1189
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-28]
+
 2024-12-26T01:14:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12498133927 # 521
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-26
